# VideoDecoderEncoder

./: .gitignore  CMakeLists.txt  Dockerfile  Install.md  README.md  Reference.md  dec_end_lib.pc.in
include/decoder/: NvDecoder.h
samples/decode_video/: CMakeLists.txt  main.cpp
src/decoder/: NvDecoder.cpp
test/SampleSharedLib/: CMakeLists.txt  sample_lib.pc.in
test/SampleSharedLib/src/: add.cpp  multiply.cpp
test/SampleSharedLib/test/: CMakeLists.txt  main.cpp
test/SampleStaticLib/: CMakeLists.txt
test/SampleStaticLib/include/: add.h  multiply.h
test/SampleStaticLib/test/: CMakeLists.txt
